Closed Bug 225163 Opened 22 years ago Closed 22 years ago

Win32 compile error on dialogs.c (Thunderbird & Firebird)

Categories

(Firefox :: Installer, defect)

x86
Windows XP
defect
Not set
major

Tracking

()

VERIFIED FIXED

People

(Reporter: d_king, Assigned: d_king)

References

()

Details

Attachments

(1 file)

Building Thunderbird (pulled 10/11/2003) I get compile errors using MinGW gcc. The first error (after several warnings) is that thunderbird/mozilla/toolkit/mozappd/installer/windows/wizard/setup/dialogs.c has an error on line 69 "PSP_HIDEHEADER undeclared). A quick search on LXR shows this used in two places in the same file, but no declaration. I also get messages about PSP_USEHEADERTITLE, PSP_USEHEADERSUBTITLE, PSH_WIZARD97, PSH_WATERMARK and PSH_HEADER.
Severity: normal → major
Thunderbird!=Mailnews -> Firebird:Installer Please select the right component the next time
Assignee: sspitzer → bugs
Component: Networking: MailNews General → Installer
Product: MailNews → Firebird
Version: Trunk → unspecified
It isn't an error with installing Firebird. It's an error on building Thunderbird. Changing to Thunderbird:Build-config.
Assignee: bugs → mscott
Component: Installer → Build Config
Product: Firebird → Thunderbird
hmm I don't see this error on my win32 build. I use msdev as my compiler. maybe it's a mingwcc thing which I know nothing about. In that case you this should happen with firebird too and should probably be afirebird installer but since thunderbird doesn't use the installer yet but firebird does.
After some fiddling with my Firebird build setup, I can see this same error on Firebird. Adding cls to see if he has any ideas on this gcc problem.
Summary: Win32 compile error on dialogs.c → Win32 compile error on dialogs.c (Thunderbird & Firebird)
moving to the right owner. ben owns this
Assignee: mscott → bugs
Component: Build Config → Installer
Product: Thunderbird → Firebird
From some looking around, it appears that the code needs an Include of prsht.h MinGW has this file, but I'm not sure if Cygwin has it.
QA Contact: gchan → bugzilla
PSP_*/PSH_* are standard windows header defines. Don't use a crappy compiler ;-)
You're right, I should be using Microsoft products, including their browser ;-)
Attached patch Patch v1.0Splinter Review
Patch to allow building with GCC and MINGW.
Assignee: bugs → d_king
Comment on attachment 136905 [details] [diff] [review] Patch v1.0 Could you review this for me?
Attachment #136905 - Flags: review?(bryner)
Comment on attachment 136905 [details] [diff] [review] Patch v1.0 as long as it doesn't break msvc, r=bryner.
Attachment #136905 - Flags: review?(bryner) → review+
Thanks for the "R". I haven't tested MSVC, however I will do so before I ask for a "SR".
Status: NEW → ASSIGNED
Further to my comment #12, if someone would like to test this patch with MSVC, please feel free to do so. Converting my build environment from gcc/MinGW/cygwin to MSVC is going to be a fun process.
Comment on attachment 136905 [details] [diff] [review] Patch v1.0 This patch doesn't break msvc (tested with Visual C v6sp5). Asking Ben for SR and to checkin on my behalf (I don't have checkin rights yet).
Attachment #136905 - Flags: superreview?(bugs)
Attachment #136905 - Flags: superreview?(bugs)
A slightly cleaned up version of the patch has been checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
QA Contact: bugzilla → installer
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: