Explicitly include prsht.h to get PSH_* includes. Set _WIN32_IE to have access to appropriate defines. Fixing mingw bustage. Thanks to David G King <d_king@xtra.co.nz> for the original patch. Bug #225163 r=bryner